--- a/index.html
+++ b/index.html
@@ -17,10 +17,26 @@
 
 <body>
 
-
-
+  <header>
+    <div>
+      <h1>Fun Bus</h1>
+      <nav>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
+  </header>
   <div class="container home">
-
+    <section class="header-section">
+      <img src="/Users/shauncarmody/Desktop/lambda-school/Preprocessing-II/img/fun-bus.jpg" alt="">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design,
+        travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure
+        fun traveler pretty design website expedition.</thead>
+      </p>
+    </section>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
@@ -44,7 +60,6 @@
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized
           website theme.</p>
       </div>
-
     </section>
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
@@ -53,7 +68,6 @@
       <img src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
-
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign.
