--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
 
-  <header>
+  <header class="header">
     <div>
       <h1>Fun Bus</h1>
-      <nav>
+      <nav class="header-navigation">
         <a href="">Home</a>
         <a href="">About Us</a>
         <a href="">Blog</a>
@@ -29,14 +29,14 @@
     </div>
   </header>
   <div class="container home">
-    <section class="header-section">
+    <header class="container-header">
       <img src="/Users/shauncarmody/Desktop/lambda-school/Preprocessing-II/img/fun-bus.jpg" alt="">
       <h2>Welcome To Fun Bus!</h2>
       <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design,
         travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure
         fun traveler pretty design website expedition.</thead>
       </p>
-    </section>
+    </header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
@@ -50,15 +50,15 @@
       </div>
     </section>
     <section class="content-section inverse-content">
-      <div class="img-content">
-        <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
-      </div>
       <div class="text-content">
         <h2>Adventure Awaits</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure.
           Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized
           website theme.</p>
+      </div>
+      <div class="img-content">
+        <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
       </div>
     </section>
     <section class="content-destination">
