2 stretch goals complete

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div>
       <h1>Fun Bus</h1>
       <nav class="header-navigation">
-        <a href="">Home</a>
-        <a href="">About Us</a>
-        <a href="">Blog</a>
-        <a href="">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
       </nav>
     </div>
   </header>
@@ -87,6 +87,25 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
+    <section class="booking-section">
+      <h4>Bookings</h4>
+      <form>
+        <section class="form-section">
+          <label for="fun-in-sun">Fun In The Sun</label>
+          <label for="mountain-excursion">Mountain Excursion</label>
+          <label for="island-getaway">Island Getaway</label><br>
+          <input type="radio" id="fun-in-sun" name="holiday" value="fun-in-sun">
+          <input type="radio" id="moutain-excursion" name="holiday" value="moutain-excursion">
+          <input type="radio" id="island-getaway" name="holiday" value="island-getaway">
+        </section>
+        <input type="text" placeholder="Name"><br>
+        <input type="email" placeholder="Email"><br>
+        <input type="text" placeholder="Phone Number"><br>
+        <input class="form-btn" type="submit" value="Submit">
+      </form>
+
+    </section>
+    
   </div><!-- container -->
 
   <footer class="footer">
